proc file added

--- a/package.json
+++ b/package.json
@@ -2,7 +2,8 @@
     "private": true,
     "scripts": {
         "dev": "vite",
-        "build": "vite build"
+        "build": "vite build",
+        "postinstall": "vite build"
     },
     "devDependencies": {
         "@popperjs/core": "^2.11.6",
